fix: center-align trigger and helpText for snowflake dropdown #957

--- a/components/dropdown/src/styles/color.scss
+++ b/components/dropdown/src/styles/color.scss
@@ -38,7 +38,7 @@
 
 /* onDark */
 :host([onDark]) {
-  .label {
+  .label, .helpText {
     color: var(--ds-auro-dropdown-label-text-color);
   }
 
